--- a/Frontend/exercicesJS/exercices/exercice9/style/style.css
+++ b/Frontend/exercicesJS/exercices/exercice9/style/style.css
@@ -4,9 +4,10 @@ body{
 
 form{
     border: 1px solid white;
+    border-radius: 10px;
     display: flex;
     padding: 10px;
-    width: 45%;
+    width: 40%;
 }
 
 .form-element{
@@ -17,5 +18,12 @@ form{
 
 button{
     width: 50%;
+    border-radius: 10px;
     margin-top: 5px;
+}
+
+.btn{
+    max-width: 50px;
+    max-height: 50px;
+    margin: 10px;
 }
