--- a/Frontend/exercice-formulaire-js/style/style.css
+++ b/Frontend/exercice-formulaire-js/style/style.css
@@ -8,6 +8,12 @@ body{
     background-color: beige;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+    margin: 15px;
+}
+
 main{
     margin: 25px;
     width: 50%;
@@ -75,4 +81,7 @@ td{
     text-align: center;
     border: 1px solid black;
     padding: 5px;
+}
+p{
+    margin: 15px;
 }
