--- a/Frontend/exercice-formulaire-js/style/style.css
+++ b/Frontend/exercice-formulaire-js/style/style.css
@@ -54,7 +54,7 @@ input, button{
 }
 
 select{
-    width: 150px;
+    width: 100px;
 }
 
 .buttons{
@@ -78,6 +78,7 @@ tr{
 
 td{
     min-width: 140px;
+    background-color: white;
     text-align: center;
     border: 1px solid black;
     padding: 5px;
