Corrections exercices and coninuation of tp nutriscore js

--- a/Frontend/tp-cardjs/style/style.css
+++ b/Frontend/tp-cardjs/style/style.css
@@ -12,11 +12,11 @@ table{
 }
 
 
-.greyBack{
+.grey-back{
     background-color: lightgray;
 }
 
-.table-head > th{
+.table-head > tr > th{
     border-right: 1px solid black;
     border-left: 1px solid black;
     padding: 10px;
