--- a/Frontend/tp-nutriscore/style/style.css
+++ b/Frontend/tp-nutriscore/style/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    border-spacing: 0;
+
 }
 
 body{
@@ -51,12 +51,14 @@ header{
 }
 
 fieldset{
-    max-height: 80px;
+    padding: 5px;
+    margin: 5px;
 }
 
 table{
     width: 100%;
     padding: 10px;
+    border-spacing: 0;
 }
 
 h1, th{
@@ -64,11 +66,15 @@ h1, th{
 }
 
 th{
-    padding: 5px;
+    padding: 10px;
 }
 
 td:not(.name){
     text-align: center;
+}
+
+.name{
+    text-align: left;
 }
 
 #first-row{
@@ -83,6 +89,10 @@ td:not(.name){
 tr:not(#first-row):hover > td:not(.nutri-score){
     background-color: #664;
     color: white;
+}
+
+tr:not(#first-row):hover>td>button{
+    background-color: #664;
 }
 
 .red{
@@ -112,7 +122,7 @@ tr:not(#first-row):hover > td:not(.nutri-score){
 button{
     color: red;
     background-color: #333;
-    padding: 5px;
+    padding: 10px;
     height: 100%;
     width: 100%;
     font-weight: bold;
