--- a/Frontend/tp-cardjs/style/style.css
+++ b/Frontend/tp-cardjs/style/style.css
@@ -6,7 +6,7 @@
 
 table{
     border-spacing: 0;
-    margin: 25px;
+    margin: 20px;
     border: 2px solid black;
     border-radius: 5px;
 }
@@ -16,7 +16,7 @@ table{
     background-color: lightgray;
 }
 
-.table-head > tr > th{
+.table-head > tr > td{
     border-right: 1px solid black;
     border-left: 1px solid black;
     padding: 10px;
@@ -30,9 +30,9 @@ td{
 div{
     display: flex;
     justify-content: flex-start;
-    margin: 25px;
+    margin: 10px;
 }
 
-p{
-    padding: 10px;
+h1, h2, p{
+    margin: 15px;
 }
