update nutri-score js, began using dataset, still WIP

--- a/Frontend/tp-nutriscore/style/style.css
+++ b/Frontend/tp-nutriscore/style/style.css
@@ -128,3 +128,11 @@ button{
     font-weight: bold;
     border: none;
 }
+
+.displayed{
+    display: table-row;
+}
+
+.hidden{
+    display: none;
+}
