--- a/Frontend/tp-accessibilite/style/ally.css
+++ b/Frontend/tp-accessibilite/style/ally.css
@@ -1,11 +1,6 @@
-.very-hidden{
-    display: none;
-}
-
 .aria-list, .code-snipnet{
     background-color: black;
     color: white;
-    width: 100%;
     padding: 0;
 }
 
@@ -32,9 +27,10 @@ img{
 
 pre{
     text-align: left;
-    width: fit-content;
 }
 
-code{
-    
+.last-section > p{
+    margin: 0;
+    height: 25px;
 }
+
