--- a/Frontend/tp-accessibilite/style/general-style.css
+++ b/Frontend/tp-accessibilite/style/general-style.css
@@ -30,6 +30,10 @@ main{
     visibility: hidden;
 }
 
+.very-hidden{
+    display: none;
+}
+
 table, p{
     line-height: 1.6em;
 }
@@ -46,6 +50,17 @@ table, p{
     font-style: italic;
 }
 
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+input, select{
+    height: 30px;
+    border-radius: 5px;
+    border-width: 1px;
+}
 
 /* Header */
 
@@ -53,6 +68,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 110px;
     padding: 15px;
     background-color: rgb(0, 100, 200);
 }
@@ -82,10 +98,25 @@ nav{
     border-radius: 5px;
 }
 
+.btn{
+    margin: 10px;
+}
+
 .btn-yellow{
     background-color: gold;
     color: black;
     border: none;
+}
+
+.btn-green{
+    background-color: #4CAF50;
+    color: black;
+    border: none;
+    height: 40px;
+    width: 100%;
+    margin: 15px;
+    font-size: 1.6rem;
+    font-weight: bold;
 }
 
 /* Footer */
