--- a/Frontend/tp-accessibilite/style/general-style.css
+++ b/Frontend/tp-accessibilite/style/general-style.css
@@ -62,6 +62,62 @@ input, select{
     border-width: 1px;
 }
 
+/* Dialog Box */
+
+dialog{
+    width: 50%;
+    border: 1px solid grey;
+}
+
+.dialog-title > h1{
+    margin: 10px;
+}
+
+input{
+    margin: 0;
+}
+
+.dialog-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.dialog-wrapper{
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.dialog-options{
+    width: 48%;
+    background-color: rgb(210, 230, 245);
+    margin: 5px;
+    padding: 10px;
+    border-left: 8px solid rgb(128, 128, 128, 0.3);
+}
+
+.dialog-inputs{
+    display: flex;
+    align-items: center;
+}
+
+.dialog-inputs > label{
+    margin: 0 10px;
+}
+
+.close-dialog{
+    height: 20px;
+    background-color: inherit;
+    border: none;
+    color: grey;
+    padding: 0;
+    width: 25px;
+    font-size: 2rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 /* Header */
 
 header{
