--- a/Frontend/tp-accessibilite/style/form.css
+++ b/Frontend/tp-accessibilite/style/form.css
@@ -9,6 +9,14 @@ form{
     box-shadow: 0px 2px 4px rgb(130, 130, 130, 0.6);
 }
 
+.search-bar{
+    width: fit-content;
+    flex-flow: row;
+    align-items: center;
+    border: none;
+    box-shadow: none;
+}
+
 h2{
     text-align: center;
 }
