--- a/Frontend/tp-employes/style/style.css
+++ b/Frontend/tp-employes/style/style.css
@@ -14,3 +14,23 @@ th, td{
     border: 1px solid black;
     padding: 15px;
 }
+
+button{
+    padding: 10px 5px;
+    margin: 5px;
+    border-radius: 5px;
+    color: white;
+    border: none;
+}
+
+.delete{
+    background-color: red;
+}
+
+.duplicate{
+    background-color: blue;
+}
+
+#salary{
+    background-color: grey;
+}
