fix: exercice squares, correction of a mistake

--- a/Frontend/test-css/style/style.css
+++ b/Frontend/test-css/style/style.css
@@ -58,7 +58,7 @@ body{
 
 .main-square{
     background-color: black;
-    margin: 10rem auto;
+    margin: 25% auto;
     height: 100%;
     width: 100%;
 }
