--- a/Frontend/tp-legumes-vue/vue-legumes/src/assets/base.css
+++ b/Frontend/tp-legumes-vue/vue-legumes/src/assets/base.css
@@ -1,6 +1,6 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --main-green: green;
+  --main-green: rgb(0, 100, 0);
   --txt-white: white;
   --txt-blue: blue;
   --txt-black: black;
@@ -14,6 +14,10 @@
   font-weight: normal;
 }
 
+html{
+  font-size: 62.5%;
+}
+
 body {
   min-height: 100vh;
   transition:
@@ -21,8 +25,20 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 15px;
+  font-size: 1.6rem;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+li{
+  height: 4.5rem;
+}
+
+input, a{
+  font-size: 1.6rem;
+}
+
+td p{
+  text-align: center;
 }
