--- a/Exercices_API/TestAPI/TestAPI/wwwroot/css/style.css
+++ b/Exercices_API/TestAPI/TestAPI/wwwroot/css/style.css
@@ -35,11 +35,16 @@ table, main>h2{
 }
 
 th{
+    color: lightgreen;
+}
+
+h2{
     padding: 10px;
 }
 
 td, .left{
     text-align: left;
+    padding: 0 10px;
 }
 
 .right{
@@ -72,4 +77,19 @@ dialog{
     border: 1px solid gold;
     background-color: brown;
     color: gold;
+}
+
+form{
+    margin-top: 5px;
+}
+
+input, .btn{
+    background-color: darkgreen;
+    border: 1px solid green;
+    color: white;
+    padding: 5px;
+}
+
+.small-cell{
+    width: 40px;
 }
