--- a/Exercices_API/TestAPI/TestAPI/wwwroot/css/style.css
+++ b/Exercices_API/TestAPI/TestAPI/wwwroot/css/style.css
@@ -12,6 +12,10 @@ body{
     color: white;
 }
 
+h1{
+    margin: 0;
+}
+
 header{
     background-image: url("../assets/banner.png");
     background-position-x: center;
@@ -44,7 +48,7 @@ h2{
 
 td, .left{
     text-align: left;
-    padding: 0 10px;
+    padding: 10px;
 }
 
 .right{
@@ -74,9 +78,10 @@ dialog{
 
 .close-btn{
     width: 100%;
+    height: 25px;
     border: 1px solid gold;
     background-color: brown;
-    color: gold;
+    color: white;
 }
 
 form{
