--- a/WPF/ExWPF/ExWPF/MainWindow.xaml
+++ b/WPF/ExWPF/ExWPF/MainWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ExWPF"
-        mc:Ignorable="d"
+        mc:Ignorable="d"        
+        xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
         xmlns:viewModels="clr-namespace:ExWPF.ViewModels"
         Title="Les Contrôles" Height="350" Width="500">
     <Window.DataContext>
