--- a/WPF/ExWPF/ExWPF/MainWindow.xaml
+++ b/WPF/ExWPF/ExWPF/MainWindow.xaml
@@ -1,25 +1,25 @@
-﻿<Window x:Class="ExWPF.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="ExWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:ExWPF"
         mc:Ignorable="d"        
-        xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
         xmlns:viewModels="clr-namespace:ExWPF.ViewModels"
         Title="Les Contrôles" Height="350" Width="500">
     <Window.DataContext>
         <viewModels:ControlViewModel/>
     </Window.DataContext>
     <Grid>
-        <TextBox HorizontalAlignment="Center" Margin="0,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Name="nameValue" HorizontalAlignment="Center" Margin="0,58,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
         <Label Content="Nom" HorizontalAlignment="Left" Margin="88,54,0,0" VerticalAlignment="Top"/>
         <Label Content="Date" HorizontalAlignment="Left" Margin="88,96,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.771,-0.272"/>
         <Label Content="Montant" HorizontalAlignment="Left" Margin="88,143,0,0" VerticalAlignment="Top"/>
         <Label Content="Code Postal" HorizontalAlignment="Left" Margin="88,198,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding FormatedDate, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,147,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}"/>
-        <TextBox HorizontalAlignment="Center" Margin="0,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Zipcode, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Name="dateValue" HorizontalAlignment="Center" Margin="0,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding FormatedDate, StringFormat={}{0:dd/MM/yyyy}, UpdateSourceTrigger=PropertyChanged}" TextChanged="dateValue_TextChanged"/>
+        <TextBox Name="amountValue" HorizontalAlignment="Center" Margin="0,147,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Amount, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Name="zipValue" HorizontalAlignment="Center" Margin="0,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Text="{Binding Zipcode, UpdateSourceTrigger=PropertyChanged}"/>
         <Button Name="btnValid" Content="Valider" HorizontalAlignment="Left" Margin="363,191,0,0" VerticalAlignment="Top" Height="25" Width="60" Click="btnValid_Click"/>
         <Button Name="btnErase" Content="Effacer" HorizontalAlignment="Left" Margin="363,235,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.911,0.517" Height="25" Width="60" Click="btnErase_Click"/>
 
