--- a/WPF/ExWPF/WPFLoan/App.xaml
+++ b/WPF/ExWPF/WPFLoan/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:WPFLoan"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="DictionaryStyle.xaml" />
     </Application.Resources>
 </Application>
