Update loan wpf fixed all I've broken

--- a/WPF/ExWPF/WPFLoan/MainWindow.xaml
+++ b/WPF/ExWPF/WPFLoan/MainWindow.xaml
@@ -23,8 +23,17 @@
                 <RadioButton Name="RadioRateNine" Tag="9" Content="9%" Checked="RadioRate_Checked"/>
             </StackPanel>
         </GroupBox>
-        <Button x:Name="okButton" Content="Ok" HorizontalAlignment="Left" Margin="530,37,0,0" VerticalAlignment="Top" Width="75" Height="22" Click="okButton_Click"/>
-        <Button x:Name="cancelButton" Content="Annuler" HorizontalAlignment="Left" Margin="530,89,0,0" VerticalAlignment="Top" Width="75" Click="cancelButton_Click"/>
+        <Button x:Name="okButton" Content="Local Save" HorizontalAlignment="Left" Margin="526,100,0,0" VerticalAlignment="Top" Width="75" Height="29" Click="okButton_Click" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-0.198"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
+        <Button x:Name="cancelButton" Content="Annuler" HorizontalAlignment="Left" Margin="526,191,0,0" VerticalAlignment="Top" Width="75" Click="cancelButton_Click" Height="26"/>
         <TextBlock HorizontalAlignment="Left" Margin="25,132,0,0" TextWrapping="Wrap" Text="Durée en mois du remboursement" VerticalAlignment="Top" Width="131"/>
         <TextBlock x:Name="durationText"  HorizontalAlignment="Left" Margin="179,141,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top"/>
         <Slider x:Name="durationSlider" Minimum="1" Maximum="200" TickFrequency="1" IsSnapToTickEnabled="True" SmallChange="1" LargeChange="1" HorizontalAlignment="Left" Margin="203,140,0,0" VerticalAlignment="Top" Width="150" ValueChanged="DurationSlider_ValueChanged"/>
@@ -39,5 +48,7 @@
         <TextBlock x:Name="refundsNumber" HorizontalAlignment="Left" Margin="415,248,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Foreground="Red"/>
         <TextBlock HorizontalAlignment="Left" Margin="490,248,0,0" TextWrapping="Wrap" Text="Remboursements" VerticalAlignment="Top"/>
         <TextBlock x:Name="labelRefundAmount" HorizontalAlignment="Left" Margin="490,300,0,0" TextWrapping="Wrap" Text="0 €" VerticalAlignment="Top" Foreground="Red"/>
+        <Button x:Name="saveBtn" Content="Save" HorizontalAlignment="Left" Margin="526,46,0,0" VerticalAlignment="Top" Width="75" Height="30"/>
+        <Button x:Name="localLoad" Content="Local Load" HorizontalAlignment="Left" Margin="526,148,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="localLoad_Click"/>
     </Grid>
 </Window>
